--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -9,7 +9,6 @@
 
 .header-gray {
     background-color: var(--bg-gray);
-
 }
 
 .header-line {
@@ -276,6 +275,10 @@
         padding: 22px 47px 20px 47px;
         z-index: 19;
         box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.06);
+    }
+
+    .header-gray .header__container{
+        background-color: var(--bg-gray);
     }
 
     .header__burger {
