--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,8 @@ font-family: Neris-Light;
 -webkit-text-size-adjust: 100%;
 scroll-behavior: smooth;
 -webkit-tap-highlight-color: transparent;
+-ms-overflow-style: none;  /* IE и Edge */
+scrollbar-width: none;  /* Firefox */
 }
 input,button,textarea{font-family: inherit;}
 input::-ms-clear{display: none;}
@@ -75,6 +77,7 @@ ul li{list-style: none;}
 img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size: inherit;font-weight: 400;}
 ::-webkit-scrollbar {display: none;}
+
 /* ---end nullification--- */
 
 
