--- a/src/pages/Layout/layout.module.css
+++ b/src/pages/Layout/layout.module.css
@@ -1,3 +1,24 @@
+.dashnav{
+    padding: 24px 0 46px 0;
+    background-color: var(--bg-gray);
+}
+
+@media (max-width: 1240px) {
+    .dashnav{
+        padding-top: 82px;
+    }
+}
+@media (max-width: 840px) {
+    .dashnav{
+        padding-top: 82px;
+    }
+} 
+@media (max-width: 745px) {
+    .dashnav{
+        padding-top: 122px;
+    }
+} 
+
 .mortgage {
     margin-top: 86px;
 }
