--- a/src/components/projectLayout/projectLayout.module.css
+++ b/src/components/projectLayout/projectLayout.module.css
@@ -51,22 +51,28 @@
 }
 
 .imgwrapper {
-    position: relative;
-    height: 410px;
-    width: 100%;
     /* max-height: 380px; */
     /* height: 100%; */
+    /* height: 410px; */
+    position: relative;
+    padding-top: 110%;
+    width: 100%;
     display: flex;
     justify-content: center
 }
 
 .img {
+    /* max-width: 336px; */
+    /* height: 100%; */
+    /* object-position: top; */
     position: absolute;
-    max-width: 100%;
-    max-height: 100%;
-    height: auto;
     top: 0;
+    max-width: 82%;
+    width: auto;
+    max-height: 90%;
+    height: auto;
     object-fit: contain;
+    padding-bottom: 10px;
 }
 
 .bullet {
@@ -138,16 +144,17 @@
 }
 
 @media (max-width: 1140px) {
-    .topright{
+    .topright {
         font-size: 23px;
     }
+
     .notifications {
         gap: 5px;
     }
 
     .imgwrapper {
-        height: 340px;
-        padding-bottom: 20px;
+        /* height: 340px; */
+        /* padding-bottom: 20px; */
     }
 
     .notifications {
@@ -195,11 +202,11 @@
 
 @media (max-width: 980px) {
     .imgwrapper {
-        height: 240px;
+        /* height: 240px; */
     }
 
     .img {
-        padding-bottom: 20px;
+        /* padding-bottom: 20px; */
     }
 }
 
@@ -208,15 +215,15 @@
         padding: 10px 10px 21px 10px;
     }
 
-    .topwrapper{
+    .topwrapper {
         /* align-items: baseline; */
     }
 
-    .topleft{
+    .topleft {
         gap: 4px;
     }
 
-    .topright{
+    .topright {
         font-size: 18px;
     }
 
@@ -230,7 +237,7 @@
         line-height: 14px;
     }
 
-    .infowrapper{
+    .infowrapper {
         align-items: center;
         padding: 0 4px;
     }
@@ -278,20 +285,21 @@
 
 @media (max-width: 470px) {
     .imgwrapper {
-        height: 200px;
+        /* height: 210px; */
     }
 
     .img {
-        padding-bottom: 20px;
+        /* padding-bottom: 20px; */
     }
 }
 
 @media (max-width: 410px) {
     .imgwrapper {
-        height: 190px;
+        /* height: 180px; */
+        padding-top: 130%;
     }
 
     .img {
-        padding-bottom: 40px;
+        padding-bottom: 30px;
     }
 }
