--- a/src/pages/Layout/layout.module.css
+++ b/src/pages/Layout/layout.module.css
@@ -1,5 +1,5 @@
 .dashnav{
-    padding: 24px 0 46px 0;
+    padding: 24px 0 36px 0;
     background-color: var(--bg-gray);
 }
 
@@ -18,6 +18,10 @@
         padding-top: 122px;
     }
 } 
+
+.layoutFull{
+    background-color: var(--bg-gray);
+}
 
 .mortgage {
     margin-top: 86px;
