--- a/src/components/buildingProgress/buildingProgress.css
+++ b/src/components/buildingProgress/buildingProgress.css
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     overflow: hidden;
+    gap: 56px;
 }
 
 .buildingProgress__control {
@@ -62,6 +63,7 @@
 }
 
 .buildingProgress .swiper{
+    width: 100%;
     padding-bottom: 60px;
 }
 
@@ -99,7 +101,7 @@
     z-index: 2;
     height: 8px !important;
     cursor: pointer;
-    width: 100px !important;
+    /* width: 100px !important; */
 }
 
 @media (max-width: 1200px) {
@@ -109,6 +111,9 @@
 }
 
 @media (max-width: 1140px) {
+    .buildingProgress{
+        gap: 40px;
+    }
     .buildingProgress__control{
         padding: 15px 0 15px 14px;
     }
@@ -121,6 +126,7 @@
 @media (max-width: 500px) {
     .buildingProgress{
         padding: 30px 0 49px 0;
+        gap: 32px;
     }
 
     .buildingProgress__control{
