--- a/src/components/projectAbout/projectAbout.module.css
+++ b/src/components/projectAbout/projectAbout.module.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     justify-content: space-between;
     gap: 20px;
+    background-color: inherit;
 }
 
 .textAndTitleWrapper {
@@ -11,7 +12,7 @@
     gap: 38px;
     max-width: 532px;
     height: 100%;
-    background-color: var(--bg-gray);
+    background-color: inherit;
     justify-content: center;
     z-index: 3;
     align-self: center;
