добавил изменения по контентным страницам

--- a/src/index.css
+++ b/src/index.css
@@ -108,6 +108,7 @@ h1,h2,h3,h4,h5,h6{font-size: inherit;font-weight: 400;}
     --border: hsla(0, 0%, 0%, 0.08);
     --gray-line: hsla(0, 0%, 89%, 1);
     --scroll: hsla(0, 0%, 0%, 0.12);
+    --map-label: hsla(219, 39%, 17%, 1);
 
     --medicine: hsla(210, 62%, 47%, 1);
     --education: hsla(167, 49%, 69%, 1);
