--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -2,7 +2,7 @@
     background-color: var(--white);
     border-radius: 5px;
     width: 100%;
-    /* overflow: hidden; */
+    overflow: hidden;
 }
 
 .layout .swiper-pagination-bullet {
