--- a/src/components/filterAndTabs/filter/filter.module.css
+++ b/src/components/filterAndTabs/filter/filter.module.css
@@ -318,7 +318,7 @@
         padding: 106px 40px 151px 40px;
         max-height: 100vh;
         height: 100%;
-        /* min-height: 100vh; */
+        min-height: 100vh;
         /* min-height: 1000px; */
         overflow-y: auto;
         top: 0;
