--- a/src/components/genplan/innerTabs/innerTabs.module.css
+++ b/src/components/genplan/innerTabs/innerTabs.module.css
@@ -235,27 +235,6 @@
     color: var(--light-gray-text);
 }
 
-.popup {
-    position: fixed;
-    width: 100vw;
-    min-height: 100vh;
-    left: 0;
-    top: 0;
-    background-color: var(--bg-gray);
-    z-index: 10;
-}
-
-.popupclose {
-    position: absolute;
-    top: 40px;
-    right: 50px;
-    cursor: pointer;
-    color: var(--gray-icons);
-    font-size: 27px;
-}
-
-
-
 @media (max-width: 1100px) {
 
     .layoutwrapper {
@@ -314,6 +293,44 @@
     }
 }
 
+@media (max-width: 830px) {
+
+    .secondpart {
+        margin: 114px 80px 26px 80px;
+    }
+}
+
+@media (max-width: 740px) {
+
+    .layoutwrapper {
+        flex-direction: column;
+        gap: 18px;
+    }
+
+    .firstpart {
+        margin-right: 20px;
+    }
+
+    .layoutlevels {
+        margin-top: 11px;
+    }
+
+    .levelsgrid {
+        /* max-width: 310px; */
+        max-width: unset;
+    }
+
+    .secondpart {
+        margin: 0;
+        padding: 0 20px;
+    }
+
+    .roomsamount {
+        margin-top: 18px;
+        margin-bottom: 22px;
+    }
+}
+
 @media (max-width: 600px) {
     .tabs {
         gap: 5px;
@@ -330,5 +347,24 @@
     .tabarrow {
         width: 30px;
         height: 30px;
+    }
+
+    .firstpart{
+        margin: 59px 10px 0 10px;
+    }
+
+    .layoutcorpus {
+        font-size: 14px;
+        line-height: 24px;
+    }
+
+    .layoutsection {
+        font-size: 13px;
+        line-height: 18px;
+    }
+
+    .roomsamount {
+        font-size: 13px;
+        line-height: 24px;
     }
 }
